<resources>
    <string name="app_name">MyWordle</string>
    <string name="take_a_guess">Take a Guess</string>
    <string name="word_entry">Word Entry</string>
    <string name="add_word">Add Word</string>
    <string name="edit_word_title">Edit Word</string>
    <string name="multiplayer_screen_title">Who\'s gone win</string>
    <string name="back_button">Back</string>
    <string name="no_word_description">Oops!\nNo word in the database.\nTap + to add.</string>
    <string name="save_action">Save</string>
    <string name="word_req">Word In*</string>
    <string name="required_fields">*required fields</string>
    <string name="word_detail_title">Word Details</string>
    <string name="delete">Delete</string>
    <string name="word">Word</string>
    <string name="word_length">Word Length</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="attention">Attention</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="word_id">Word ID: %1$d</string>
    <string name="loading_failed">Failed to load</string>
    <string name="retry">Retry</string>
    <string name="loading">Loading</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="success">Success</string>
    <string name="register">Register</string>
    <string name="connection_error">Connection Error</string>
    <string name="user_name">UserName</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="online_single_player">Online Single Player</string>
</resources>